# c-mdn-status

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  c_errors_config.h.in  clang_format.yml
.github/workflows/: cross-platform-build-and-test.yml  generic-jobs.yml
cmake/: fetch_content_wrapper.cmake  utils.cmake
configurations/: c_errors_config.h.in  clang_tidy.yml  mdn_status_config.h.in
scripts/: build_and_test.py  build_docker_image.py  build_docker_image_reclone.py  run_clang_format.py  run_container.py  run_dev_container.py  update_dev_container_files.py  utils.py
src/: CMakeLists.txt
src/errors/: CMakeLists.txt  errors.c
src/errors/include/: errors.h
src/mdn_status/: CMakeLists.txt  mdn_status.c
src/mdn_status/include/: mdn_status.h
src/status/: CMakeLists.txt  status.c
src/status/include/mdn/: status.h
test/: CMakeLists.txt
test/errors_test/: CMakeLists.txt  errors_test.cpp
test/mdn_status_test/: CMakeLists.txt  mdn_status_test.cpp
test/status_test/: CMakeLists.txt  status_test.cpp
