cmake_minimum_required(VERSION 3.28)
project(c_errors
    LANGUAGES C CXX
)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

message(STATUS "CMAKE_C_COMPILER_ID: ${CMAKE_C_COMPILER_ID}")
message(STATUS "CMAKE_CXX_COMPILER_ID: ${CMAKE_CXX_COMPILER_ID}")

if(NOT DEFINED C_ERRORS_SAFE_MODE)
    message(FATAL_ERROR "C_ERRORS_SAFE_MODE must be set to either TRUE or FALSE")
endif()
message(STATUS "C_ERRORS_SAFE_MODE: ${C_ERRORS_SAFE_MODE}")

set(CONFIG_FILE_NAME "${PROJECT_NAME}_config.h")
set(CONFIG_DIR_NAME configurations)
file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${CONFIG_DIR_NAME}/${CONFIG_FILE_NAME}.in" CONFIG_SRC_FILE)
file(TO_CMAKE_PATH "${CMAKE_CURRENT_BINARY_DIR}/${CONFIG_DIR_NAME}" CONFIG_DST_DIR)
file(TO_CMAKE_PATH "${CONFIG_DST_DIR}/${CONFIG_FILE_NAME}" CONFIG_DST_FILE)
configure_file(${CONFIG_SRC_FILE} ${CONFIG_DST_FILE})

set(INCLUDE_DIRECTORIES_TO_PROPAGATE ${CONFIG_DST_DIR})
include_directories(${INCLUDE_DIRECTORIES_TO_PROPAGATE})

file(TO_CMAKE_PATH "${CMAKE_SOURCE_DIR}/cmake" MY_CMAKE_SCRIPTS_DIR)
set(CMAKE_MODULE_PATH "${MY_CMAKE_SCRIPTS_DIR}" ${CMAKE_MODULE_PATH})

include(utils)
include(fetch_content_wrapper)
init_fetch_content_wrapper()

include(CTest)

add_subdirectory(src)
add_subdirectory(test)
